[gd_scene format=3 uid="uid://ddsp1thn0m1lx"]

[ext_resource type="Script" uid="uid://be7bkltdxjp0h" path="res://src/gerente_fase/gerente_fase.gd" id="1_ulhbh"]
[ext_resource type="PackedScene" uid="uid://gwnq5b2x3p82" path="res://src/ui/pause-menu/pause_menu.tscn" id="2_e05qi"]

[node name="gerente_fase" type="Node2D" unique_id=934152009]
script = ExtResource("1_ulhbh")

[node name="ui" type="CanvasLayer" parent="." unique_id=787045958]

[node name="PauseMenu" parent="ui" unique_id=381341788 instance=ExtResource("2_e05qi")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 6
size_flags_vertical = 6

[connection signal="QuitToLevelSelection" from="ui/PauseMenu" to="." method="_on_pause_menu_quit_to_level_selection"]
[connection signal="QuitToMainMenu" from="ui/PauseMenu" to="." method="_on_pause_menu_quit_to_main_menu"]
[connection signal="ReloadLevel" from="ui/PauseMenu" to="." method="_on_pause_menu_reload_level"]
[connection signal="ResumeGame" from="ui/PauseMenu" to="." method="_on_pause_menu_resume_game"]
